--- a/asset/scss/module/_learn.scss
+++ b/asset/scss/module/_learn.scss
@@ -1,6 +1,6 @@
 .learn{
 	background: url("../img/bk_learn@2x.png") no-repeat;
-	background-size: contain;
+	background-size: cover;
 	margin-top: -13.3rem;
 	margin-bottom: 13.6rem;
 	padding-top: 55.5rem;
