--- a/asset/scss/module/_news.scss
+++ b/asset/scss/module/_news.scss
@@ -28,6 +28,9 @@
 			font-weight: bold;
 			font-size: 2.4rem;
 			margin-bottom: 1.3rem;
+			@include mq(){
+				font-size: 1.6rem;
+			}
 			time{
 				letter-spacing: (80/1000)*1em;
 				margin-right: 4.1%;
@@ -41,6 +44,9 @@
 		p.news-txt{
 		font-family: $noto;
 		font-size: 2rem;
+			@include mq(){
+				font-size: 1.3rem;
+			}
 	}
 		&:nth-of-type(2){
 			margin-top: 7.2rem;
