レスポンシブ　KVのスタイルまで

--- a/asset/scss/module/_kv.scss
+++ b/asset/scss/module/_kv.scss
@@ -4,6 +4,11 @@
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position-x: 51%;
+	@include mq(){
+		padding-top: 12.2rem;
+		background-size: 83%;
+		background-position-y:28%;
+	}
 	
 	h1.div-tit{
 		font-family: $poppins;
@@ -16,6 +21,9 @@
 		margin: auto;
 		padding-top: .3rem;
 		padding-left: .6rem;
+		@include mq(){
+			font-size: 7.2rem;
+		}
 	}
 	a.div-box{
 		width: (244/1280)*100%;
@@ -27,6 +35,11 @@
 		justify-content: space-between;
 		align-items: center;
 		transition: .5s;
+		@include mq(){
+			width: (177/375)*100%;
+			margin-top: 8.4rem;
+			padding: 1.4rem 1.2rem 1.2rem 1.8rem;
+		}
 		
 		&:hover{
 			background: $purple;
@@ -63,11 +76,19 @@
 		justify-content: center;
 		align-items: center;
 		margin-top: .7rem;
+		@include mq(){
+			width: 2.5rem;
+			height: 2.5rem
+		}
 		
 		img{
 			width: 1.8rem;
 			height: 1.8rem;
 			transition: .5s;
+			@include mq(){
+				width: 1.3rem;
+				height: 1.3rem;
+			}
 		}
 		
 	}
@@ -79,6 +100,10 @@
 			color: $purple;
 			letter-spacing: (30/1000)*1em;
 			transition: .5s;
+			@include mq(){
+				font-size: 1.6rem;
+				line-height: 1.6;
+			}
 			
 			span{
 				font-size: (10/22)*1em;
@@ -87,12 +112,20 @@
 				display: inline-block;
 				vertical-align: .2rem;
 				transition: .5s;
+				@include mq(){
+					font-size: .8rem;
+					margin-left: 0%;
+				}
 			}
 		}
 		.div-txt{
 			font-family: $noto;
 			font-size: 1.3rem;
 			transition: .5s;
+			@include mq(){
+				font-size: 1rem;
+				line-height: 2.5;
+			}
 		}
 	}
 }
