--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -394,9 +394,18 @@ p {
     margin: 0 auto;
     padding-top: 5.41rem;
     display: flex; }
+    @media screen and (max-width: 767px) {
+      .header-box {
+        width: 93.304%;
+        padding-top: 1.41rem; } }
   .header-logo {
     width: 15.4809888486%;
     margin-left: -.3%; }
+    @media screen and (max-width: 767px) {
+      .header-logo {
+        width: 29.3406499185%;
+        line-height: 1;
+        margin-left: 0; } }
   .header-txt {
     font-family: "Noto Sans JP", sans-serif;
     font-size: 1.8rem;
@@ -425,21 +434,32 @@ p {
   display: block; }
   @media screen and (max-width: 767px) {
     .gnav-btn {
-      top: 1.9rem; } }
+      top: 1.9rem;
+      width: 14.2902054932%;
+      height: 1.5rem; } }
   .gnav-btn span {
     display: block;
     height: .3rem;
     background: #fff;
     position: absolute;
     right: .2rem; }
+    @media screen and (max-width: 767px) {
+      .gnav-btn span {
+        height: .2rem; } }
     .gnav-btn span:first-of-type {
       width: 100%;
       top: .9vw;
       transition: .5s; }
+      @media screen and (max-width: 767px) {
+        .gnav-btn span:first-of-type {
+          top: -.1vw; } }
     .gnav-btn span:nth-of-type(2) {
       width: 80%;
       top: 2.5vw;
       transition: .5s; }
+      @media screen and (max-width: 767px) {
+        .gnav-btn span:nth-of-type(2) {
+          top: 3.5vw; } }
 
 .gnav-btn.open {
   display: block; }
@@ -513,6 +533,11 @@ p {
   background-repeat: no-repeat;
   background-size: contain;
   background-position-x: 51%; }
+  @media screen and (max-width: 767px) {
+    .kv {
+      padding-top: 12.2rem;
+      background-size: 83%;
+      background-position-y: 28%; } }
   .kv h1.div-tit {
     font-family: "Poppins", sans-serif;
     font-size: 14.8rem;
@@ -524,6 +549,9 @@ p {
     margin: auto;
     padding-top: .3rem;
     padding-left: .6rem; }
+    @media screen and (max-width: 767px) {
+      .kv h1.div-tit {
+        font-size: 7.2rem; } }
   .kv a.div-box {
     width: 19.0625%;
     margin-left: auto;
@@ -534,6 +562,11 @@ p {
     justify-content: space-between;
     align-items: center;
     transition: .5s; }
+    @media screen and (max-width: 767px) {
+      .kv a.div-box {
+        width: 47.2%;
+        margin-top: 8.4rem;
+        padding: 1.4rem 1.2rem 1.2rem 1.8rem; } }
     .kv a.div-box:hover {
       background: #4F4583;
       transition: .5s; }
@@ -558,10 +591,18 @@ p {
     justify-content: center;
     align-items: center;
     margin-top: .7rem; }
+    @media screen and (max-width: 767px) {
+      .kv .div-btn {
+        width: 2.5rem;
+        height: 2.5rem; } }
     .kv .div-btn img {
       width: 1.8rem;
       height: 1.8rem;
       transition: .5s; }
+      @media screen and (max-width: 767px) {
+        .kv .div-btn img {
+          width: 1.3rem;
+          height: 1.3rem; } }
   .kv .kv-inner .div-tit {
     font-family: "Poppins", sans-serif;
     font-size: 2.2rem;
@@ -569,6 +610,10 @@ p {
     color: #4F4583;
     letter-spacing: 0.03em;
     transition: .5s; }
+    @media screen and (max-width: 767px) {
+      .kv .kv-inner .div-tit {
+        font-size: 1.6rem;
+        line-height: 1.6; } }
     .kv .kv-inner .div-tit span {
       font-size: 0.4545454545em;
       color: #333333;
@@ -576,10 +621,18 @@ p {
       display: inline-block;
       vertical-align: .2rem;
       transition: .5s; }
+      @media screen and (max-width: 767px) {
+        .kv .kv-inner .div-tit span {
+          font-size: .8rem;
+          margin-left: 0%; } }
   .kv .kv-inner .div-txt {
     font-family: "Noto Sans JP", sans-serif;
     font-size: 1.3rem;
     transition: .5s; }
+    @media screen and (max-width: 767px) {
+      .kv .kv-inner .div-txt {
+        font-size: 1rem;
+        line-height: 2.5; } }
 
 .intro {
   background: #CACED8;
@@ -676,6 +729,9 @@ p {
     position: relative;
     height: 1em;
     height: 2em; }
+    @media screen and (max-width: 767px) {
+      .news h2.news-tit {
+        font-size: 4.8rem; } }
     .news h2.news-tit::before {
       content: '';
       width: 19.6rem;
@@ -864,6 +920,9 @@ p {
     position: relative;
     height: 1em;
     margin-bottom: 1vw; }
+    @media screen and (max-width: 767px) {
+      .sche h2.sche-tit {
+        font-size: 4.8rem; } }
     .sche h2.sche-tit::before {
       content: '';
       width: 19.6rem;
@@ -1098,7 +1157,6 @@ p {
 
 body {
   background: url("../../art/iPhone 6-7-8 – 1.png") no-repeat;
-  background-size: cover;
   opacity: 0.7; }
 
 ._page .under-tit-wrap_h1 {
@@ -1127,6 +1185,9 @@ body {
   margin-left: 10%;
   position: relative;
   height: 1em; }
+  @media screen and (max-width: 767px) {
+    ._page .under h2.under-tit {
+      font-size: 4.8rem; } }
   ._page .under h2.under-tit::before {
     content: '';
     width: 19.6rem;
@@ -1335,6 +1396,9 @@ body {
       position: relative;
       height: 1em;
       margin-left: 19%; }
+      @media screen and (max-width: 767px) {
+        ._about .under-box-l h2.under-tit {
+          font-size: 4.8rem; } }
       ._about .under-box-l h2.under-tit::before {
         content: '';
         width: 19.6rem;
