--- a/asset/scss/module/_header.scss
+++ b/asset/scss/module/_header.scss
@@ -6,10 +6,19 @@
 		margin: 0 auto;
 		padding-top: 5.41rem;
 		display: flex;
+		@include mq(){
+			width: (349.89/375)*100%;
+			padding-top: 1.41rem;
+		}
 	}
 	&-logo{
 		width: (184.36/1190.88)*100%;
 		margin-left: -.3%;
+		@include mq(){
+			width: (102.66/349.89)*100%;
+			line-height: 1;
+			margin-left: 0;
+		}
 	}
 	&-txt{
 		font-family: $noto;
@@ -45,6 +54,8 @@
 	display: block;
 	@include mq(){
 		top:1.9rem;
+		width: (50/349.89)*100%;
+		height: 1.5rem;
 	}
 	span{
 		display: block;
@@ -52,17 +63,26 @@
 		background: $white;
 		position: absolute;
 		right: .2rem;
+		@include mq(){
+			height: .2rem;
+		}
 		
 		&:first-of-type{
 			width: 100%;
 			top:.9vw;
 			transition: .5s;
+			@include mq(){
+				top:-.1vw;
+			}
 		}
 		
 		&:nth-of-type(2){
 			width: (64/80)*100%;
 			top:2.5vw;
 			transition: .5s;
+			@include mq(){
+				top: 3.5vw;
+			}
 		}
 	}
 }
