--- a/asset/scss/style.scss
+++ b/asset/scss/style.scss
@@ -33,7 +33,7 @@ $beige:#EDE8E2;
 @import "./module/_single";
 body{
 	background: url("../../art/iPhone 6-7-8 – 1.png") no-repeat;
-	background-size: cover;
+//	background-size: cover;
 	opacity: 0.7;
 //	background-position-y:-454px;
 }
