--- a/asset/scss/module/_intro.scss
+++ b/asset/scss/module/_intro.scss
@@ -1,13 +1,21 @@
 .intro{
 	background: $gray;
 	padding: 8.3rem 0px 0px 8%;
+	@include mq(){
+		padding: 0;
+	}
 	
 	h2.intro-tit{
 		font-family: $poppins;
 		font-size: 1.8rem;
 		margin-left: 5.9%;
 		letter-spacing: (60/1000)*1em;
-			
+		@include mq(){
+			font-size: 1.2rem;
+			font-weight: 500;
+			width: fit-content;
+			margin: 2.7rem auto;
+		}
 
 	}
 	
